ingress/asset-ingress.yaml
# allows access to services from outside the cluster
kind: Ingress

apiVersion: networking.k8s.io/v1

metadata:
  # name of the ingress
  name: asset-management-ingress
  # separate namespace to organize cluster's resource
  namespace: asset
  annotations:
    # shared nginx ingress
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    # host name
    - host: asset-management.com
      http:
        # paths specification
        paths:
          - path: /
            # matches based on a prefix in the URL path
            pathType: Prefix
            backend:
              # service to point
              service:
                name: asset-management-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: asset-management-server-service
                port:
                  number: 80
